--- a/documentation/IPTC-NinJS-Guidelines.adoc
+++ b/documentation/IPTC-NinJS-Guidelines.adoc
@@ -97,18 +97,18 @@ by an API call.
   "byline" : "Paulo Santalucia and Frances d'Emilio",
   "headline" : "Captain of wrecked cruise ship on trial in Italy",
   "body_text" : "GROSSETO, Italy (AP) -- The trial of the captain of the
-  shipwrecked Costa Concordia cruise liner has begun in a theater
-  converted into a courtroom in Tuscany to accommodate all the survivors and
-  relatives of the 32 victims who want to see justice carried out in the 2012
-  tragedy. The sole defendant, Francesco Schettino, his eyes shaded by
-  sunglasses and slipping into a back door, made no comment to reporters as he
-  arrived for his trial Tuesday on charges of multiple manslaughter, abandoning
-  ship and causing the shipwreck near the island of Giglio. His lawyer, Domenico
-  Pepe, told reporters that, as expected, the judge was postponing the hearing
-  due to an eight-day nationwide lawyers' strike. Pepe said some 1,000 witnesses
-  are expected to eventually testify. Many of them are expected to be from among
-  the 4,2000 passengers and crew aboard the ship that struck a jagged reef off
-  Giglio, took on water and capsized. Schettino has denied wrongdoing."
+  shipwrecked Costa Concordia cruise liner has begun in a theater converted into
+  a courtroom in Tuscany to accommodate all the survivors and relatives of the
+  32 victims who want to see justice carried out in the 2012 tragedy. The sole
+  defendant, Francesco Schettino, his eyes shaded by sunglasses and slipping
+  into a back door, made no comment to reporters as he arrived for his trial
+  Tuesday on charges of multiple manslaughter, abandoning ship and causing the
+  shipwreck near the island of Giglio. His lawyer, Domenico Pepe, told reporters
+  that, as expected, the judge was postponing the hearing due to an eight-day
+  nationwide lawyers' strike. Pepe said some 1,000 witnesses are expected to
+  eventually testify. Many of them are expected to be from among the 4,200
+  passengers and crew aboard the ship that struck a jagged reef off Giglio, took
+  on water and capsized. Schettino has denied wrongdoing."
 }
 
 === ninjs and other standards
@@ -615,7 +615,7 @@ plain text (`body_text`) and HTML (`body_html`).
   near the island of Giglio. His lawyer, Domenico Pepe, told reporters that, as
   expected, the judge was postponing the hearing due to an eight-day nationwide
   lawyers' strike. Pepe said some 1,000 witnesses are expected to eventually
-  testify. Many of them are expected to be from among the 4,2000 passengers and
+  testify. Many of them are expected to be from among the 4,200 passengers and
   crew aboard the ship that struck a jagged reef off Giglio, took on water and
   capsized. Schettino has denied wrongdoing.",
   "body_xhtml" : "<p>GROSSETO, Italy (AP) -- The trial of the captain of the
@@ -629,7 +629,7 @@ plain text (`body_text`) and HTML (`body_html`).
   <p>His lawyer, Domenico Pepe, told reporters that, as expected, the judge was
   postponing the hearing due to an eight-day nationwide lawyers' strike.</p>
   <p>Pepe said some 1,000 witnesses are expected to eventually testify. Many of
-  them are expected to be from among the 4,2000 passengers and crew aboard the
+  them are expected to be from among the 4,200 passengers and crew aboard the
   ship that struck a jagged reef off Giglio, took on water and capsized.
   Schettino has denied wrongdoing.</p>"
 }
@@ -692,7 +692,7 @@ readable names for the entity but also machine readable identifiers by the
   shipwreck near the island of Giglio. His lawyer, Domenico Pepe, told reporters
   that, as expected, the judge was postponing the hearing due to an eight-day
   nationwide lawyers' strike. Pepe said some 1,000 witnesses are expected to
-  eventually testify. Many of them are expected to be from among the 4,2000
+  eventually testify. Many of them are expected to be from among the 4,200
   passengers and crew aboard the ship that struck a jagged reef off Giglio, took
   on water and capsized. Schettino has denied wrongdoing.",
   "body_xhtml" : "<p>GROSSETO, Italy (AP) -- The trial of the captain of the
@@ -706,7 +706,7 @@ readable names for the entity but also machine readable identifiers by the
   <p>His lawyer, Domenico Pepe, told reporters that, as expected, the judge was
   postponing the hearing due to an eight-day nationwide lawyers' strike.</p>
   <p>Pepe said some 1,000 witnesses are expected to eventually testify. Many of
-  them are expected to be from among the 4,2000 passengers and crew aboard the
+  them are expected to be from among the 4,200 passengers and crew aboard the
   ship that struck a jagged reef off Giglio, took on water and capsized.
   Schettino has denied wrongdoing.</p>"
 }
@@ -828,7 +828,7 @@ The ninjs object includes:
   shipwreck near the island of Giglio. His lawyer, Domenico Pepe, told reporters
   that, as expected, the judge was postponing the hearing due to an eight-day
   nationwide lawyers' strike. Pepe said some 1,000 witnesses are expected to
-  eventually testify. Many of them are expected to be from among the 4,2000
+  eventually testify. Many of them are expected to be from among the 4,200
   passengers and crew aboard the ship that struck a jagged reef off Giglio, took
   on water and capsized. Schettino has denied wrongdoing.",
   "body_xhtml" : "<p>GROSSETO, Italy (AP) -- The trial of the captain of the
@@ -842,7 +842,7 @@ The ninjs object includes:
   <p>His lawyer, Domenico Pepe, told reporters that, as expected, the judge was
   postponing the hearing due to an eight-day nationwide lawyers' strike.</p>
   <p>Pepe said some 1,000 witnesses are expected to eventually testify. Many of
-  them are expected to be from among the 4,2000 passengers and crew aboard the
+  them are expected to be from among the 4,200 passengers and crew aboard the
   ship that struck a jagged reef off Giglio, took on water and capsized.
   Schettino has denied wrongdoing.</p>",
   "associations" : {
@@ -1150,7 +1150,7 @@ ninjs document:
   shipwreck near the island of Giglio. His lawyer, Domenico Pepe, told reporters
   that, as expected, the judge was postponing the hearing due to an eight-day
   nationwide lawyers' strike. Pepe said some 1,000 witnesses are expected to
-  eventually testify. Many of them are expected to be from among the 4,2000
+  eventually testify. Many of them are expected to be from among the 4,200
   passengers and crew aboard the ship that struck a jagged reef off Giglio, took
   on water and capsized. Schettino has denied wrongdoing."
 }
