--- a/documentation/IPTC-NinJS-Guidelines.adoc
+++ b/documentation/IPTC-NinJS-Guidelines.adoc
@@ -386,7 +386,7 @@ This property is an array of objects with the following properties:
 !string
 
 !symbols
-!Symbols used for a finanical instrument linked to the organisation at a specific market place. +
+!Symbols used for a financial instrument linked to the organisation at a specific market place. +
 Array of objects with the properties: +
 `ticker`: Ticker symbol used for the financial instrument (string)
 `exchange`: Identifier for the marketplace which uses the ticker symbols of the ticker property (string)
