--- a/documentation/IPTC-NinJS-Guidelines.adoc
+++ b/documentation/IPTC-NinJS-Guidelines.adoc
@@ -11,8 +11,8 @@ keywords: iptc, news, story, article, media, json, javascript, markup, schema, m
 :author: IPTC News in JSON Working Group
 :email: office@iptc.org
 :version-label: Covers version
-:revnumber: 1.2
-:revremark: Revised 2020-02-10
+:revnumber: 1.3
+:revremark: Revised 2020-05-04
 :toc: left
 :toc-title: ninjs User Guide
 :toclevels: 2
@@ -37,9 +37,9 @@ https://www.iptc.org/std/ninjs/generator/[simple ninjs generator] so you can see
 how simple a real ninjs document can be. We have also built a JSON schema for
 ninjs to help you <<How to validate objects,validate your ninjs implementation>>.
 
-The latest version of the standard is 1.2: 
-https://iptc.org/std/ninjs/ninjs-schema_1.2.json[Version 1.2 of the ninjs
-schema] was made available in October 2019.
+The latest version of the standard is 1.3: 
+https://iptc.org/std/ninjs/ninjs-schema_1.3.json[Version 1.3 of the ninjs
+schema] was made available in May 2020.
 
 The IPTC welcomes your feedback on how to improve the standard via the
 https://groups.io/g/iptc-ninjs[public ninjs discussion group]. You can also add
@@ -174,8 +174,41 @@ These properties concern the structure, type and creation details of the content
 `composite` +
 `component`
 
+|$standard
+|An object with information about standard, version and schema this instance is valid against. +
+Added in ninjs 1.3. +
+This property is an object with the following child properties:
+
+[cols="3"]
+!===
+!Property name!Description!Data type
+
+!name
+!The name of the standard, such as "ninjs".
+!string
+
+!version
+!The version of the standard used, such as "1.3".
+!string
+
+!schema
+!The uri of the json schema to use for validation, such as "https://www.iptc.org/std/ninjs/ninjs-schema_1.3.json".
+!URI
+
+!===
+
+|object
+
+|altids_
+|Alternative identifiers for the item. It is up to the individual provider to
+name and set type on the alternative identifiers they like to use. +
+This property is an array of objects with no restrictions on key or value. +
+Added in ninjs 1.3.
+|array of unrestricted key/value pairs
+
 |mimetype
-|A MIME type which applies to this news object
+|The [https://www.iana.org/assignments/media-types/media-types.xhtml](MIME type)
+which applies to this news object
 |string
 
 |representationtype
@@ -267,6 +300,14 @@ Properties representing the actual story that will be shown to the audience.
 |A brief and snappy introduction to the content, designed to catch the reader's attention
 |string
 
+|headline___<type>__
+|Additional headlines or strings of that type can be handled here. This does not
+replace the above headline property, but enables users to add additional headlines
+for specific purposes such as teasers, other languages. +
+Multiple headline_* properties are allowed. +
+Added in ninjs 1.3.
+|string
+
 |slugline
 |A human-readable identifier for the item.
 |string
@@ -299,6 +340,33 @@ ninjs allows content to be marked up with one simple string-based metadata prope
 |located
 |The name of the location from which the content originates
 |string
+
+|genre
+|The nature, intellectual or journalistic form of the content. +
+Added in ninjs 1.3. +
+This property is an array of objects with the following properties:
+
+[cols="3"]
+!===
+!Property name!Description!Data type
+
+!name
+!The human-readable name of the genre, such as "Press Release".
+!string
+
+!scheme
+!The identifier of a scheme/controlled vocabulary which includes a code for the
+genre, such as "http://cv.iptc.org/newscodes/genre/"
+!URI
+
+!code
+!The code for the person in the scheme/controlled vocabulary which is identified
+by the scheme property, such as "Press_Release".
+!string
+
+!===
+
+|array
 
 |person
 |An individual human being. +
@@ -503,6 +571,36 @@ This property is an array of objects with the following properties:
 
 |array
 
+|trustindicator
+|An array of objects to allow links to documents about trust indicators, intended to show
+the trustworthiness of the news provider. +
+Added in ninjs 1.3. +
+This property is an array of objects with the following properties:
+
+[cols="3"]
+!===
+!Property name!Description!Data type
+
+!title
+!The name of the resource being referenced, such as "BBC Editorial Guidelines"
+!string
+
+!href
+!The URL for accessing the trust indicator resource, such as https://www.bbc.com/editorialguidelines/
+!string
+
+!scheme
+!The identifier of a scheme/controlled vocabulary which includes a code for the infosource, typically
+http://cv.iptc.org/newscodes/trustindicator/
+!URI
+
+!code
+!The code for the infosource in a scheme/controlled vocabulary which is identified by the scheme property, such as `editorialPolicy`
+!string
+!===
+
+|array
+
 
 |===
 
@@ -665,12 +763,12 @@ In some cases, your news releases may have content that does not fit into the ob
 To do this, do the following:
 
 . make a copy of the schema file
-. change the URL of the "id" property of IPTC's ninjs 1.0 ...
+. change the URL of the "id" property of IPTC's ninjs 1.3 ...
 +
 [source,json]
 {
   "$schema": "http://json-schema.org/draft-04/schema#",
-  "id" : "http://www.iptc.org/std/ninjs/ninjs-schema_1.2.json#",
+  "id" : "http://www.iptc.org/std/ninjs/ninjs-schema_1.3.json#",
   "type" : "object",
   ...
 +
@@ -717,7 +815,7 @@ your new schema:
     "type" : "object",
     "additionalProperties" : false,
     "patternProperties" : {
-      "^[a-zA-Z0-9]+" :  {
+      "^[a-zA-Z0-9]+$" :  {
         "$ref": "http://www.example.com/e-ninjs-schema_0.1.json#"
       }
     }
